[gd_scene load_steps=18 format=3 uid="uid://bi0a7jk2ww4a0"]

[ext_resource type="Script" path="res://Game/GameObj/Wagon_Table/wagon.gd" id="1_l7a54"]
[ext_resource type="Texture2D" uid="uid://5pnyrcrb5ye5" path="res://Game/GameObj/Objects/Texture/WagonAnimation.png" id="2_ontiw"]
[ext_resource type="Texture2D" uid="uid://duebvqo8mb3on" path="res://Game/GameObj/Objects/Texture/Wagon.png" id="3_w353i"]
[ext_resource type="Texture2D" uid="uid://2bi6skqmxgue" path="res://Game/GameObj/Objects/Texture/Wagon-focus.png" id="4_q06ko"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qxlkh"]
atlas = ExtResource("2_ontiw")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gth2"]
atlas = ExtResource("2_ontiw")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_scj4m"]
atlas = ExtResource("2_ontiw")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbr6t"]
atlas = ExtResource("2_ontiw")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qhqo"]
atlas = ExtResource("2_ontiw")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgeur"]
atlas = ExtResource("3_w353i")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp63u"]
atlas = ExtResource("4_q06ko")
region = Rect2(0, 0, 64, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_8v873"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxlkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gth2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scj4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbr6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qhqo")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgeur")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp63u")
}],
"loop": true,
"name": &"Focus",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3bfo"]
size = Vector2(42.4615, 35.8461)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qqno"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k4l4y"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2jf07"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6njk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Wagon" type="CharacterBody2D"]
script = ExtResource("1_l7a54")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(2.66658, 27)
scale = Vector2(1.08333, 1.08333)
sprite_frames = SubResource("SpriteFrames_8v873")
animation = &"2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(14, 32.4167)
scale = Vector2(1.08333, 1.08333)
shape = SubResource("RectangleShape2D_q3bfo")

[node name="Button" type="Button" parent="."]
offset_left = -23.0
offset_top = 14.0
offset_right = 37.0
offset_bottom = 52.0
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxFlat_3qqno")
theme_override_styles/hover = SubResource("StyleBoxFlat_k4l4y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2jf07")
theme_override_styles/normal = SubResource("StyleBoxFlat_r6njk")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
